--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.9"
   }
+  
 }
