--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webpack-starter-kit",
   "version": "2.0.0",
   "description": "Project starter kit using webpack, mocha, chai, and SCSS/SASS enabled",
+  "homepage": "https://SamanthaMcElhinney.github.io/vagabond-ventures",
   "main": "src/index.js",
   "repository": {
     "type": "git",
@@ -14,6 +15,7 @@
     "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.0.0",
     "mocha": "^8.4.0",
     "mochapack": "^2.1.2",
     "sass": "^1.34.0",
@@ -27,10 +29,10 @@
     "start": "webpack serve",
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
-    "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
+    "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "dayjs": "^1.11.9"
   }
-  
 }
